Upload First Check Albert
structured files for Albert to check

--- a/TopicModeling#1_Preprocessing.ipynb
+++ b/TopicModeling#1_Preprocessing.ipynb
@@ -912,12 +912,46 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# merge all tweets from each district (district pooling) and treat them as one document respectively\n",
     "district_combined = english_tweets[[\"text_clean\",\"id_distrito\"]].groupby(\"id_distrito\")[\"text_clean\"].apply(lambda x: \"\".join(x))\n",
     "documents_district_pooling = district_combined.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id_distrito\n",
+       "801901    #cure ( Betty Ford's in Barcelona) Sunday fund...\n",
+       "801902    Barcelona Plaza de España #usk #urbansketchers...\n",
+       "801903    Get up work [enjoy] sleep repeat #workroutine ...\n",
+       "801904    Last Tuesday hyde_club honored to play leocost...\n",
+       "801905    #poblenou #barcelona #gentrification #gentrifi...\n",
+       "801906    Saturday back to bocacocktaillounge from 23:00...\n",
+       "801907    Just posted a photo  Barri de Gracia Barcelona...\n",
+       "801908    Brew Pub to try a few of the 30 beers on offer...\n",
+       "801909    I love my school is on fire! Fuego! Mantenlo p...\n",
+       "801910    LAST DAY IN BARCELONA | Getting some sun some ...\n",
+       "Name: text_clean, dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check documents\n",
+    "district_combined"
    ]
   },
   {
