--- a/TopicModeling#4_ApplyLDA.ipynb
+++ b/TopicModeling#4_ApplyLDA.ipynb
@@ -628,6 +628,467 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine Results into a Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create districts dataframe\n",
+    "dictionary = {\"district\": [\"01\",\"02\",\"03\",\"04\",\"05\",\"06\",\"07\",\"08\",\"09\",\"10\"],\n",
+    "              \"topic0\": topic0,\n",
+    "              \"topic1\": topic1,\n",
+    "              \"topic2\": topic2,\n",
+    "              \"topic3\": topic3,\n",
+    "              \"topic4\": topic4,\n",
+    "              \"topic5\": topic5,\n",
+    "              \"topic6\": topic6,\n",
+    "              \"topic7\": topic7}\n",
+    "districts = pd.DataFrame(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>topic0</th>\n",
+       "      <th>topic1</th>\n",
+       "      <th>topic2</th>\n",
+       "      <th>topic3</th>\n",
+       "      <th>topic4</th>\n",
+       "      <th>topic5</th>\n",
+       "      <th>topic6</th>\n",
+       "      <th>topic7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>district</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>01</th>\n",
+       "      <td>0.047270</td>\n",
+       "      <td>0.207954</td>\n",
+       "      <td>0.105573</td>\n",
+       "      <td>0.077964</td>\n",
+       "      <td>0.215210</td>\n",
+       "      <td>0.069285</td>\n",
+       "      <td>0.192552</td>\n",
+       "      <td>0.084192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>02</th>\n",
+       "      <td>0.053167</td>\n",
+       "      <td>0.107034</td>\n",
+       "      <td>0.065160</td>\n",
+       "      <td>0.038424</td>\n",
+       "      <td>0.068487</td>\n",
+       "      <td>0.055348</td>\n",
+       "      <td>0.553782</td>\n",
+       "      <td>0.058598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03</th>\n",
+       "      <td>0.069798</td>\n",
+       "      <td>0.163018</td>\n",
+       "      <td>0.077833</td>\n",
+       "      <td>0.171519</td>\n",
+       "      <td>0.149119</td>\n",
+       "      <td>0.097292</td>\n",
+       "      <td>0.184498</td>\n",
+       "      <td>0.086924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>04</th>\n",
+       "      <td>0.058052</td>\n",
+       "      <td>0.247620</td>\n",
+       "      <td>0.070515</td>\n",
+       "      <td>0.085680</td>\n",
+       "      <td>0.112435</td>\n",
+       "      <td>0.076014</td>\n",
+       "      <td>0.145379</td>\n",
+       "      <td>0.204306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>05</th>\n",
+       "      <td>0.080009</td>\n",
+       "      <td>0.157889</td>\n",
+       "      <td>0.099436</td>\n",
+       "      <td>0.064962</td>\n",
+       "      <td>0.137619</td>\n",
+       "      <td>0.109222</td>\n",
+       "      <td>0.239339</td>\n",
+       "      <td>0.111523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>06</th>\n",
+       "      <td>0.075109</td>\n",
+       "      <td>0.127716</td>\n",
+       "      <td>0.181372</td>\n",
+       "      <td>0.084711</td>\n",
+       "      <td>0.208417</td>\n",
+       "      <td>0.084128</td>\n",
+       "      <td>0.186107</td>\n",
+       "      <td>0.052439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>07</th>\n",
+       "      <td>0.146802</td>\n",
+       "      <td>0.114062</td>\n",
+       "      <td>0.127431</td>\n",
+       "      <td>0.072802</td>\n",
+       "      <td>0.157818</td>\n",
+       "      <td>0.052415</td>\n",
+       "      <td>0.210644</td>\n",
+       "      <td>0.118025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>08</th>\n",
+       "      <td>0.088678</td>\n",
+       "      <td>0.150307</td>\n",
+       "      <td>0.075208</td>\n",
+       "      <td>0.106539</td>\n",
+       "      <td>0.163468</td>\n",
+       "      <td>0.112541</td>\n",
+       "      <td>0.175883</td>\n",
+       "      <td>0.127376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09</th>\n",
+       "      <td>0.056886</td>\n",
+       "      <td>0.158481</td>\n",
+       "      <td>0.094985</td>\n",
+       "      <td>0.090266</td>\n",
+       "      <td>0.142782</td>\n",
+       "      <td>0.060511</td>\n",
+       "      <td>0.317354</td>\n",
+       "      <td>0.078736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.047782</td>\n",
+       "      <td>0.250085</td>\n",
+       "      <td>0.081938</td>\n",
+       "      <td>0.075497</td>\n",
+       "      <td>0.218107</td>\n",
+       "      <td>0.105621</td>\n",
+       "      <td>0.134151</td>\n",
+       "      <td>0.086820</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            topic0    topic1    topic2    topic3    topic4    topic5  \\\n",
+       "district                                                               \n",
+       "01        0.047270  0.207954  0.105573  0.077964  0.215210  0.069285   \n",
+       "02        0.053167  0.107034  0.065160  0.038424  0.068487  0.055348   \n",
+       "03        0.069798  0.163018  0.077833  0.171519  0.149119  0.097292   \n",
+       "04        0.058052  0.247620  0.070515  0.085680  0.112435  0.076014   \n",
+       "05        0.080009  0.157889  0.099436  0.064962  0.137619  0.109222   \n",
+       "06        0.075109  0.127716  0.181372  0.084711  0.208417  0.084128   \n",
+       "07        0.146802  0.114062  0.127431  0.072802  0.157818  0.052415   \n",
+       "08        0.088678  0.150307  0.075208  0.106539  0.163468  0.112541   \n",
+       "09        0.056886  0.158481  0.094985  0.090266  0.142782  0.060511   \n",
+       "10        0.047782  0.250085  0.081938  0.075497  0.218107  0.105621   \n",
+       "\n",
+       "            topic6    topic7  \n",
+       "district                      \n",
+       "01        0.192552  0.084192  \n",
+       "02        0.553782  0.058598  \n",
+       "03        0.184498  0.086924  \n",
+       "04        0.145379  0.204306  \n",
+       "05        0.239339  0.111523  \n",
+       "06        0.186107  0.052439  \n",
+       "07        0.210644  0.118025  \n",
+       "08        0.175883  0.127376  \n",
+       "09        0.317354  0.078736  \n",
+       "10        0.134151  0.086820  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# display dataframe and set index\n",
+    "districts.set_index(\"district\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Results to a CSV File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ignore this part! (not necessary!)\n",
+    "\n",
+    "# Ensure that excel will not delete leading 0s\n",
+    "# districts.district = districts.district.apply('\"={}\"'.format)\n",
+    "# districts.district = districts.district.apply(lambda x: str(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>district</th>\n",
+       "      <th>topic0</th>\n",
+       "      <th>topic1</th>\n",
+       "      <th>topic2</th>\n",
+       "      <th>topic3</th>\n",
+       "      <th>topic4</th>\n",
+       "      <th>topic5</th>\n",
+       "      <th>topic6</th>\n",
+       "      <th>topic7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01</td>\n",
+       "      <td>0.047270</td>\n",
+       "      <td>0.207954</td>\n",
+       "      <td>0.105573</td>\n",
+       "      <td>0.077964</td>\n",
+       "      <td>0.215210</td>\n",
+       "      <td>0.069285</td>\n",
+       "      <td>0.192552</td>\n",
+       "      <td>0.084192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02</td>\n",
+       "      <td>0.053167</td>\n",
+       "      <td>0.107034</td>\n",
+       "      <td>0.065160</td>\n",
+       "      <td>0.038424</td>\n",
+       "      <td>0.068487</td>\n",
+       "      <td>0.055348</td>\n",
+       "      <td>0.553782</td>\n",
+       "      <td>0.058598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03</td>\n",
+       "      <td>0.069798</td>\n",
+       "      <td>0.163018</td>\n",
+       "      <td>0.077833</td>\n",
+       "      <td>0.171519</td>\n",
+       "      <td>0.149119</td>\n",
+       "      <td>0.097292</td>\n",
+       "      <td>0.184498</td>\n",
+       "      <td>0.086924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>04</td>\n",
+       "      <td>0.058052</td>\n",
+       "      <td>0.247620</td>\n",
+       "      <td>0.070515</td>\n",
+       "      <td>0.085680</td>\n",
+       "      <td>0.112435</td>\n",
+       "      <td>0.076014</td>\n",
+       "      <td>0.145379</td>\n",
+       "      <td>0.204306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>05</td>\n",
+       "      <td>0.080009</td>\n",
+       "      <td>0.157889</td>\n",
+       "      <td>0.099436</td>\n",
+       "      <td>0.064962</td>\n",
+       "      <td>0.137619</td>\n",
+       "      <td>0.109222</td>\n",
+       "      <td>0.239339</td>\n",
+       "      <td>0.111523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>06</td>\n",
+       "      <td>0.075109</td>\n",
+       "      <td>0.127716</td>\n",
+       "      <td>0.181372</td>\n",
+       "      <td>0.084711</td>\n",
+       "      <td>0.208417</td>\n",
+       "      <td>0.084128</td>\n",
+       "      <td>0.186107</td>\n",
+       "      <td>0.052439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>07</td>\n",
+       "      <td>0.146802</td>\n",
+       "      <td>0.114062</td>\n",
+       "      <td>0.127431</td>\n",
+       "      <td>0.072802</td>\n",
+       "      <td>0.157818</td>\n",
+       "      <td>0.052415</td>\n",
+       "      <td>0.210644</td>\n",
+       "      <td>0.118025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>08</td>\n",
+       "      <td>0.088678</td>\n",
+       "      <td>0.150307</td>\n",
+       "      <td>0.075208</td>\n",
+       "      <td>0.106539</td>\n",
+       "      <td>0.163468</td>\n",
+       "      <td>0.112541</td>\n",
+       "      <td>0.175883</td>\n",
+       "      <td>0.127376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>09</td>\n",
+       "      <td>0.056886</td>\n",
+       "      <td>0.158481</td>\n",
+       "      <td>0.094985</td>\n",
+       "      <td>0.090266</td>\n",
+       "      <td>0.142782</td>\n",
+       "      <td>0.060511</td>\n",
+       "      <td>0.317354</td>\n",
+       "      <td>0.078736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.047782</td>\n",
+       "      <td>0.250085</td>\n",
+       "      <td>0.081938</td>\n",
+       "      <td>0.075497</td>\n",
+       "      <td>0.218107</td>\n",
+       "      <td>0.105621</td>\n",
+       "      <td>0.134151</td>\n",
+       "      <td>0.086820</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  district    topic0    topic1    topic2    topic3    topic4    topic5  \\\n",
+       "0       01  0.047270  0.207954  0.105573  0.077964  0.215210  0.069285   \n",
+       "1       02  0.053167  0.107034  0.065160  0.038424  0.068487  0.055348   \n",
+       "2       03  0.069798  0.163018  0.077833  0.171519  0.149119  0.097292   \n",
+       "3       04  0.058052  0.247620  0.070515  0.085680  0.112435  0.076014   \n",
+       "4       05  0.080009  0.157889  0.099436  0.064962  0.137619  0.109222   \n",
+       "5       06  0.075109  0.127716  0.181372  0.084711  0.208417  0.084128   \n",
+       "6       07  0.146802  0.114062  0.127431  0.072802  0.157818  0.052415   \n",
+       "7       08  0.088678  0.150307  0.075208  0.106539  0.163468  0.112541   \n",
+       "8       09  0.056886  0.158481  0.094985  0.090266  0.142782  0.060511   \n",
+       "9       10  0.047782  0.250085  0.081938  0.075497  0.218107  0.105621   \n",
+       "\n",
+       "     topic6    topic7  \n",
+       "0  0.192552  0.084192  \n",
+       "1  0.553782  0.058598  \n",
+       "2  0.184498  0.086924  \n",
+       "3  0.145379  0.204306  \n",
+       "4  0.239339  0.111523  \n",
+       "5  0.186107  0.052439  \n",
+       "6  0.210644  0.118025  \n",
+       "7  0.175883  0.127376  \n",
+       "8  0.317354  0.078736  \n",
+       "9  0.134151  0.086820  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "districts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "districts.to_csv(\"districts.csv\", encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Part: Dynamic Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
