Before Changing Preprocessing

--- a/TopicModeling#1_Preprocessing.ipynb
+++ b/TopicModeling#1_Preprocessing.ipynb
@@ -1690,7 +1690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apply Function to Preprocess Test Documents (Before Testing Them with LDA)"
+    "## Apply Function to Preprocess Test Documents (Before Testing Them with Topic Models)"
    ]
   },
   {
